refactor button name

--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                            <button id="submitStore" class="btn btn-primary saveChanges" type="button">Save Chnages</button>
+                            <button id="submitStore" class="btn btn-primary saveChanges" type="button">Save Changes</button>
                         </div>
                     </form>
                 </div>
