refactor customer modal button name

--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                            <button id="submitC" class="btn btn-primary saveChanges" type="button">Submit form</button>
+                            <button id="submitC" class="btn btn-primary saveChanges" type="button">Save Changes</button>
                         </div>
                     </form>
                 </div>
@@ -1075,7 +1075,7 @@
 
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                                <button id="updateC" class="btn btn-primary saveChanges" type="button">Submit form</button>
+                                <button id="updateC" class="btn btn-primary saveChanges" type="button">Update Changes</button>
                             </div>
                         </form>
                     </div>
@@ -1110,7 +1110,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
-                                <button id="deleteC" class="btn btn-primary saveChanges" type="button">Submit form</button>
+                                <button id="deleteC" class="btn btn-primary saveChanges" type="button">Remove Changes</button>
                             </div>
                         </form>
                     </div>
