--- a/index.html
+++ b/index.html
@@ -1304,22 +1304,35 @@
         <h3 class="purpleTextColor">Place Your Orders</h3>
     </div>
     <div class="col-6 placeOrderForm">
-        <form class="row g-3 ">
-            <div class="col-12 margin-bottom">
+        <form class="row g-3 needs-validation">
+
+            <div class="col-5 margin-bottom">
                 <label for="orderId" class="form-label">Order Id :</label>
                 <input type="text" class="form-control" id="orderId" placeholder="O001">
+                <div class="o-id invalid-feedback">
+                    Order ID is a required field : Pattern Oo-1.
+                </div>
+            </div>
+            <div class="col-7 margin-bottom">
+                <label for="date" class="form-label">Date :</label>
+                <input type="date" class="form-control" id="date" placeholder="date">
+                <div class="o-date invalid-feedback">
+                    please input valid current date.
+                </div>
             </div>
 
             <div class="row">
                 <div class="col-5 margin-bottom">
                     <label for="selectCustomerId" class="form-label">Customer Id :</label>
                     <select id="selectCustomerId" class="form-select">
-
                     </select>
                 </div>
                 <div class="col-7 margin-bottom">
                     <label for="cusName" class="form-label inputFieldMargin">Customer Name :</label>
                     <input type="text" id="cusName" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
+                    <div class="c-name invalid-feedback">
+                        Minimum 5, Max 20,Space Allowed and input only English letters.
+                    </div>
                 </div>
             </div>
 
@@ -1327,10 +1340,16 @@
                 <div class="col-5 margin-bottom">
                     <label for="cusCity" class="form-label ">City :</label>
                     <input type="text" id="cusCity" class="form-control" placeholder="select city" aria-label="City">
+                    <div class="c-city invalid-feedback">
+                        Max 25 letters and input only English letters.
+                    </div>
                 </div>
                 <div class="col-7 margin-bottom">
                     <label for="cusTel" class="form-label inputFieldMargin">Telephone :</label>
                     <input type="text" id="cusTel" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                    <div class="c-tel invalid-feedback">
+                        Please enter valid mobile number.Space Not Allowed,Max 10.
+                    </div>
                 </div>
             </div>
 
@@ -1343,12 +1362,14 @@
                 <div class="col-5 margin-bottom">
                     <label for="selectItemCode" class="form-label">Item Code</label>
                     <select id="selectItemCode" class="form-select">
-
                     </select>
                 </div>
                 <div class="col-7 margin-bottom">
                     <label for="itemNameP" class="form-label inputFieldMargin">Item Name :</label>
                     <input type="text" id="itemNameP" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                    <div class="s-name invalid-feedback">
+                        Minimum 5, Max 20,Space Allowed and input only English letters.
+                    </div>
                 </div>
             </div>
 
@@ -1356,6 +1377,9 @@
                 <div class="col-5 margin-bottom">
                     <label for="qtyOnHandP" class="form-label">QTY On Hand :</label>
                     <input type="text" id="qtyOnHandP" class="form-control" placeholder="QTY On Hand" aria-label="QTY On Hand">
+                    <div class="s-qty invalid-feedback">
+                        Max 15 letters and only numbers.
+                    </div>
                 </div>
                 <div class="col-7 margin-bottom">
                     <label for="orderQTYP" class="form-label inputFieldMargin">Order QTY :</label>
@@ -1363,13 +1387,25 @@
                 </div>
             </div>
 
-            <div class="col-md-12 marginZero">
+            <div class="col-md-6 marginZero">
                 <label for="inputPriceP" class="form-label">Price</label>
                 <input type="text" class="form-control" id="inputPriceP" placeholder="price">
+                <div class="s-price invalid-feedback">
+                    Please Input Price and only numbers.
+                </div>
+            </div>
+
+            <div class="col-md-6 marginZero">
+                <label for="discountOrder" class="form-label">Discount</label>
+                <input type="text" class="form-control" id="discountOrder" placeholder="discount">
+                <div class="s-discount invalid-feedback">
+                    Please Input valid Discount and only numbers.
+                </div>
             </div>
             <div class="col-12">
                 <button id="addToCartBtn" type="button" class="btn btn-primary btnSize addToCartBtn-color btn-addToCart btn-all"><span> Add To Cart </span></button>
             </div>
+
             <div id="line2"></div>
 
             <div class="col-6" id="bill">
