--- a/index.html
+++ b/index.html
@@ -1492,6 +1492,7 @@
             <thead>
             <tr>
                 <th class="OrderTableHead " scope="col">Order Id</th>
+                <th class="OrderTableHead " scope="col">Date</th>
                 <th class="OrderTableHead" scope="col">Customer</th>
                 <th class="OrderTableHead" scope="col">City</th>
                 <th class="OrderTableHead" scope="col">Tel</th>
@@ -1502,7 +1503,7 @@
                 <th class="OrderTableHead" scope="col">Price</th>
             </tr>
             </thead>
-            <tbody id="viewOrderDetailTable"><!--storeTable -->
+            <tbody id="viewOrderDetailTable">
 
             </tbody>
         </table>
