--- a/index.html
+++ b/index.html
@@ -1447,7 +1447,7 @@
 </section>
 
 <!--dashboard-->
-<section id="dash-sec" class="">
+<section id="dash-sec">
     <div class="row margin fonts">
         <div id="div1" class="card shadow col-md-5 card-container">
             <div>
@@ -1525,61 +1525,94 @@
                 <div class="modal-body">
                     <!--  code here  -->
                     <div class="col-12 placeOrderForm">
-                        <form class="row g-3 ">
+
+                        <form class="row g-3 needs-validation">
+
                             <div class="col-12 margin-bottom">
                                 <label for="inputOrderId" class="form-label">Order Id :</label>
-                                <input type="text" id="inputOrderId" class="form-control inputFieldMargin" placeholder="order Id" aria-label="order Id">
+                                <input type="text" class="form-control" id="inputOrderId" placeholder="O001">
+                                <div class="o-idD invalid-feedback">
+                                    Order ID is a required field : Pattern Oo-1.
+                                </div>
+                            </div>
+                            <div class="col-12 margin-bottom">
+                                <label for="dateU" class="form-label">Date :</label>
+                                <input type="date" class="form-control" id="dateU" placeholder="date">
+                                <div class="o-dateD invalid-feedback">
+                                    please input valid current date.
+                                </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-12 margin-bottom">
                                     <label for="customerNameU" class="form-label inputFieldMargin">Customer Name :</label>
                                     <input type="text" id="customerNameU" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
+                                    <div class="c-nameD invalid-feedback">
+                                        Minimum 5, Max 20,Space Allowed and input only English letters.
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="row">
-                                <div class="col-5 margin-bottom">
+                                <div class="col-6 margin-bottom">
                                     <label for="inputCityStore" class="form-label ">City :</label>
                                     <input type="text" id="inputCityStore" class="form-control" placeholder="select city" aria-label="City">
+                                    <div class="c-cityD invalid-feedback">
+                                        Max 25 letters and input only English letters.
+                                    </div>
                                 </div>
-                                <div class="col-7 margin-bottom">
+                                <div class="col-6 margin-bottom">
                                     <label for="inputTelephone" class="form-label inputFieldMargin">Telephone :</label>
                                     <input type="text" id="inputTelephone" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                                    <div class="c-telD invalid-feedback">
+                                        Please enter valid mobile number.Space Not Allowed,Max 10.
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="margin-bottom">
                                 <h4 class="purpleTextColor">Item Section</h4>
-                                <div id="line1UpdateOrder"></div>
                             </div>
 
                             <div class="row">
-                                <div class="col-5 margin-bottom">
+                                <div class="col-6 margin-bottom">
                                     <label for="inputItemCode" class="form-label">Item Code</label>
                                     <input type="text" id="inputItemCode" class="form-control inputFieldMargin" placeholder="item code" aria-label="item Code">
+                                    <div class="s-codeD invalid-feedback">
+                                        Item Code is a required field : Pattern I00-001.
+                                    </div>
                                 </div>
-                                <div class="col-7 margin-bottom">
+
+                                <div class="col-6 margin-bottom">
                                     <label for="inputItemName" class="form-label inputFieldMargin">Item Name :</label>
                                     <input type="text" id="inputItemName" class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                                    <div class="s-nameD invalid-feedback">
+                                        Minimum 5, Max 20,Space Allowed and input only English letters.
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="row">
-                                <div class="col-12 margin-bottom">
-                                    <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
-                                    <input type="text" id="orderQTY" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                                <div class="row">
+                                    <div class="col-12 margin-bottom">
+                                        <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
+                                        <input type="text" id="orderQTY" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                                    </div>
+
+                                    <div class="col-12 marginZero">
+                                        <label for="inputDiscount" class="form-label">Discount</label>
+                                        <input type="text" class="form-control" id="inputDiscount" placeholder="discount">
+                                        <div class="s-discountD invalid-feedback">
+                                            Please Input valid Discount and only numbers.
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="col-md-12 marginZero">
-                                <label for="inputDiscount" class="form-label">Discount</label>
-                                <input type="text" class="form-control" id="inputDiscount" placeholder="discount">
-                            </div>
-
-                            <div class="col-md-12 marginZero">
-                                <label for="inputPrice" class="form-label">Price</label>
-                                <input type="text" class="form-control" id="inputPrice" placeholder="price">
+                                <div class="col-md-12 marginZero">
+                                    <label for="inputPrice" class="form-label">Price</label>
+                                    <input type="text" class="form-control" id="inputPrice" placeholder="price">
+                                    <div class="s-priceD invalid-feedback">
+                                        Please Input Price and only numbers.
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
