--- a/index.html
+++ b/index.html
@@ -1384,6 +1384,9 @@
                 <div class="col-7 margin-bottom">
                     <label for="orderQTYP" class="form-label inputFieldMargin">Order QTY :</label>
                     <input type="text" id="orderQTYP" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                    <div class="s-qtyOrder invalid-feedback">
+                        please input valid quantity.
+                    </div>
                 </div>
             </div>
 
@@ -1595,6 +1598,9 @@
                                     <div class="col-12 margin-bottom">
                                         <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
                                         <input type="text" id="orderQTY" class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                                        <div class="s-qtyOrderD invalid-feedback">
+                                            please input valid quantity.
+                                        </div>
                                     </div>
 
                                     <div class="col-12 marginZero">
