--- a/index.html
+++ b/index.html
@@ -1418,11 +1418,15 @@
                 </div>
 
                 <div class="itemsDetails">
-                    <div id="itemNameLabel" class="col-6 ">
+                    <div id="itemNameLabel" class="col-2 ">
 
                     </div>
 
-                    <div id="itemPriceListMainDiv" class="col-6">
+                    <div id="itemPriceListMainDiv" class="col-2">
+
+                    </div>
+
+                    <div id="orderRemove" class="col-2">
 
                     </div>
                 </div>
