--- a/index.html
+++ b/index.html
@@ -1418,16 +1418,18 @@
                 </div>
 
                 <div class="itemsDetails">
-                    <div id="itemNameLabel" class="col-2 ">
+                    <div>
+                        <div id="itemNameLabel" class="col-2 ">
 
-                    </div>
+                        </div>
 
-                    <div id="itemPriceListMainDiv" class="col-2">
+                        <div id="itemPriceListMainDiv" class="col-2">
 
-                    </div>
+                        </div>
 
-                    <div id="orderRemove" class="col-2">
+                        <div id="orderRemove" class="col-2">
 
+                        </div>
                     </div>
                 </div>
 
