remove item details

--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
                 </div>
 
                 <div class="itemsDetails">
-                    <div>
+                    <div id="itemDetailsContainer">
                         <div id="itemNameLabel" class="col-2 ">
 
                         </div>
