--- a/index.html
+++ b/index.html
@@ -1423,6 +1423,14 @@
 
                         </div>
 
+                        <div id="unit-price" class="col-2 ">
+
+                        </div>
+
+                        <div id="itemQty" class="col-2 ">
+
+                        </div>
+
                         <div id="itemPriceListMainDiv" class="col-2">
 
                         </div>
