refactor label for name

--- a/index.html
+++ b/index.html
@@ -1221,14 +1221,14 @@
                     <!-- code-here -->
                     <form class="row g-3 needs-validation" novalidate>
                         <div class="col-md-12">
-                            <label for="itemCode" class="form-label">Item Code</label>
+                            <label for="itemCodeS" class="form-label">Item Code</label>
                             <input type="text" class="inputCustomerId form-control" id="itemCodeS" required>
                             <div class="s-code invalid-feedback">
                                 Item Code is a required field : Pattern I00-001.
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <label for="itemName" class="form-label">Item Name</label>
+                            <label for="itemNameS" class="form-label">Item Name</label>
                             <input type="text" class="form-control" id="itemNameS" required>
                             <div class="s-name invalid-feedback">
                                 Minimum 5, Max 20,Space Allowed and input only English letters.
@@ -1236,7 +1236,7 @@
                         </div>
 
                         <div class="col-md-12">
-                            <label for="inputQTY" class="form-label">QTY On Hand</label>
+                            <label for="qty" class="form-label">QTY On Hand</label>
                             <input type="text" class="form-control" id="qty" required>
                             <div class="s-qty invalid-feedback">
                                 Max 15 letters and only numbers.
@@ -1244,7 +1244,7 @@
                         </div>
 
                         <div class="col-md-12">
-                            <label for="unitPrice" class="form-label">Unit Price</label>
+                            <label for="priceS" class="form-label">Unit Price</label>
                             <input type="text" class="form-control" id="priceS" required>
                             <div class="s-price invalid-feedback">
                                 Please Input Price and only numbers.
@@ -1273,14 +1273,14 @@
                     <!--    code here  -->
                     <form class="row g-3 needs-validation" novalidate>
                         <div class="col-md-12">
-                            <label for="itemCode" class="form-label">Item Code</label>
+                            <label for="itemCodeR" class="form-label">Item Code</label>
                             <input type="text" class="inputCustomerId form-control" id="itemCodeR" required>
                             <div class="s-code invalid-feedback">
                                 Item Code is a required field : Pattern I00-001.
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <label for="itemName" class="form-label">Item Name</label>
+                            <label for="itemNameR" class="form-label">Item Name</label>
                             <input type="text" class="form-control" id="itemNameR" required>
                             <div class="s-name invalid-feedback">
                                 Minimum 5, Max 20,Space Allowed and input only English letters.
