refactor label for

--- a/index.html
+++ b/index.html
@@ -1095,14 +1095,14 @@
                         <!--   code here   -->
                         <form class="row g-3 needs-validation" novalidate>
                             <div class="col-md-12">
-                                <label for="-inputCustomerId" class="form-label">Customer ID</label>
+                                <label for="inputCustomerId" class="form-label">Customer ID</label>
                                 <input type="text" class="inputCustomerId form-control" id="inputCustomerId" required>
                                 <div class="c-id invalid-feedback">
                                     customer ID is a required field : Pattern C00-001.
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <label for="_inputCustomerName" class="form-label">Customer Name</label>
+                                <label for="inputCustomerName" class="form-label">Customer Name</label>
                                 <input type="text" class="inputCustomerName form-control" id="inputCustomerName" required>
                                 <div class="c-name invalid-feedback">
                                     Minimum 5, Max 20,Space Allowed and input only English letters.
