add discount rate

--- a/index.html
+++ b/index.html
@@ -1619,6 +1619,14 @@
                                     </div>
 
                                     <div class="col-12 marginZero">
+                                        <label for="rate" class="form-label">Discount Rate(%)</label>
+                                        <input type="text" class="form-control" id="rate" placeholder="rate">
+                                        <div class="s-discountRate invalid-feedback">
+                                            Please Input valid Discount rate and only numbers.
+                                        </div>
+                                    </div>
+
+                                    <div class="col-12 marginZero">
                                         <label for="inputDiscount" class="form-label">Discount</label>
                                         <input type="text" class="form-control" id="inputDiscount" placeholder="discount">
                                         <div class="s-discountD invalid-feedback">
