--- a/index.html
+++ b/index.html
@@ -1642,6 +1642,7 @@
                                         Please Input Price and only numbers.
                                     </div>
                                 </div>
+                                <label>Give discount only if the total price is 8000 or more.</label>
                             </div>
                         </form>
                     </div>
