refactor discount name

--- a/index.html
+++ b/index.html
@@ -1400,8 +1400,8 @@
             </div>
 
             <div class="col-md-6 marginZero">
-                <label for="discountOrder" class="form-label">Discount</label>
-                <input type="text" class="form-control" id="discountOrder" placeholder="discount">
+                <label for="discountOrder" class="form-label">Discount Rate</label>
+                <input type="text" class="form-control" id="discountOrder" placeholder="rate">
                 <div class="s-discount invalid-feedback">
                     Please Input valid Discount and only numbers.
                 </div>
