--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@
 
                             <div class="col-12 margin-bottom">
                                 <label for="inputOrderId" class="form-label">Order Id :</label>
-                                <input type="text" class="form-control" id="inputOrderId" placeholder="O001">
+                                <input type="text" class="form-control" id="inputOrderId" placeholder="O0-1">
                                 <div class="o-idD invalid-feedback">
                                     Order ID is a required field : Pattern Oo-1.
                                 </div>
